--- a/main.html
+++ b/main.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promise Table</title>
+    <title>Promise Example</title>
 </head>
 <body>
     <table border="1">
         <thead>
             <tr>
                 <th>Promise</th>
-                <th>Time (seconds)</th>
+                <th>Time Taken (seconds)</th>
             </tr>
         </thead>
-        <tbody>
-            <tr id="loading-row">
+        <tbody id="results">
+            <tr>
                 <td colspan="2">Loading...</td>
             </tr>
         </tbody>
