--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
                 <th>Time Taken (seconds)</th>
             </tr>
         </thead>
-        <tbody id="results">
-            <tr>
+        <tbody id="output">
+            <tr id="loading">
                 <td colspan="2">Loading...</td>
             </tr>
         </tbody>
