--- a/main.html
+++ b/main.html
@@ -3,34 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wait for Multiple Promises</title>
-    <style>
-        table {
-            width: 50%;
-            border-collapse: collapse;
-            margin: 20px auto;
-        }
-        th, td {
-            border: 1px solid #ccc;
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
+    <title>Promise Example</title>
 </head>
 <body>
-
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th>Promise</th>
-                <th>Time (seconds)</th>
+                <th>Time Taken (seconds)</th>
             </tr>
         </thead>
-        <tbody id="promiseTableBody">
-            <tr>
+        <tbody id="output">
+            <tr id="loading">
                 <td colspan="2">Loading...</td>
             </tr>
         </tbody>
